fixed welcome tab not showing correctly

--- a/resources/style/style.css
+++ b/resources/style/style.css
@@ -39,7 +39,7 @@ html, body {
 
 #welcome {
     display: flex;
-    height: 100%;
+    height: calc(100% - 100px);
     justify-content: center;
     align-items: center;
     text-align: center;
